--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="http://" target="_blank" rel="noopener noreferrer" class="btn"> ORDER FOOD</a>
         </div>
         <div class="half-width">
-            <img src="/images/shapes/Group 8447.png" alt="" srcset="">
+            <img src="images/shapes/Group 8447.png" alt="" srcset="">
         </div>
     </section>
 
